# todo-api-fastapi

./: .coveragerc  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/disabled-workflows/: deploy-heroku.yml  migrate-db-heroku.yml
.github/workflows/: deploy-azure.yml  deploy-gcp.yml  deploy-heroku.yml  migrate-db-azure.yml  migrate-db-gcp.yml  migrate-db-heroku.yml  pr-python-ci.yml
api/: azure_db_config.py  cloud_db_config.py  cors.py  db.py  main.py  migrate_db.py
api/cruds/: task.py  task_crud.py  user_crud.py
api/models/: task.py  task_model.py  user_model.py
api/routers/: task.py  task_router.py  user_router.py
api/schemas/: task.py  task_schema.py  user_schema.py
docs/deployment/: azure.md  gcp.md  heroku.md
tests/: conftest.py  test_main.py  test_task.py  test_user.py
tests/task/: test_task_create.py  test_task_create_validation.py  test_task_delete.py  test_task_delete_validation.py  test_task_get.py  test_task_get_validation.py  test_task_update.py  test_task_update_validation.py
tests/user/: test_user_create.py  test_user_create_validation.py  test_user_delete.py  test_user_delete_validation.py  test_user_get.py  test_user_get_validation.py  test_user_update.py  test_user_update_validation.py
