[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
aiomysql = "^0.2.0"
email-validator = "^2.1.1"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
