[tool.poetry]
package-mode = false
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
aiomysql = "^0.2.0"
pymysql = "^1.1.0"
python-dotenv = "^1.0.0"
email-validator = "^2.1.1"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"
pytest-cov = "^6.0.0"
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = []

fixable = ["ALL"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"